--- a/web-basics/04-dom/4_todolist/style.css
+++ b/web-basics/04-dom/4_todolist/style.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Pretendard, Arial, sans-serif;
 }
 
 body {
-  font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   display: flex;
   justify-content: center;
@@ -17,8 +17,14 @@ body {
   width: 100%;
   max-width: 500px;
   padding: 20px;
-  border-radius: 8px;
+  border-radius: 12px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -35,19 +41,21 @@ input[type="checkbox"] {
   padding-top: 20px;
 }
 #input-todo {
+  height: 50px;
   flex-grow: 1;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ddd;
-  border-radius: 4px 0 0 4px;
+  border-radius: 12px 0 0 12px;
 }
 
 #btn-add {
+  height: 50px;
   padding: 10px 15px;
   background-color: #4caf50;
   color: white;
   border: none;
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 12px 12px 0;
   cursor: pointer;
 }
 
@@ -57,7 +65,7 @@ input[type="checkbox"] {
   background-color: #f9f9f9;
   padding: 10px;
   margin-bottom: 10px;
-  border-radius: 4px;
+  border-radius: 12px;
 }
 
 .todo-item > .completed {
@@ -71,6 +79,7 @@ input[type="checkbox"] {
   color: white;
   border: none;
   padding: 5px 10px;
-  border-radius: 4px;
+  border-radius: 12px;
   cursor: pointer;
+  font-weight: bold;
 }
