--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f4f4f4;
+    background-color: #eaeff1;
     display: flex;
     justify-content: center;
     padding-top: 50px;
@@ -64,7 +64,7 @@ input[type="checkbox"] {
 .todo-item {
     display: flex;
     align-items: center;
-    background-color: #f9f9f9;
+    background-color: #eaeff1;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 12px;
@@ -72,7 +72,8 @@ input[type="checkbox"] {
 
 .todo-item > .completed {
     text-decoration: line-through;
-    color: #888;
+    font-style: italic;
+    color: #6d6d6d;
 }
 
 .delete-btn {
