완료된 작업 옆에 타임스탬프 표시

--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -70,10 +70,22 @@ input[type="checkbox"] {
     border-radius: 12px;
 }
 
-.todo-item > .completed {
+.completed > span {
     text-decoration: line-through;
     font-style: italic;
     color: #6d6d6d;
+}
+
+.todo-item > .timestamp {
+    visibility: collapse;
+}
+
+.todo-item.completed > .timestamp {
+    visibility: visible;
+    font-size: 0.8rem;
+    margin-left: 20px;
+    font-style: normal;
+    text-decoration: none;
 }
 
 .delete-btn {
