--- a/flask-basics/app/templates/navbar.html
+++ b/flask-basics/app/templates/navbar.html
@@ -2,24 +2,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ url_for('main.index') }}">Flask 게시판</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       {% if g.user %}
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.sign_out') }}"
-            >{{ g.user.username }} (로그아웃)</a
-          >
+          <a class="nav-link" href="{{ url_for('auth.sign_out') }}">{{ g.user.username }} (로그아웃)</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user.profile', username=g.user.username) }}">프로필</a>
         </li>
       </ul>
       {% else %}
